# tweeter

./: .gitignore  README.md  build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: admin.py  api.py  blacklisted_words.py  cloudinary.py  models.py  serializers.py  urls.py
backend/migrations/: 0001_initial.py  0002_alter_tweet_options_alter_profile_user.py  0003_alter_tweet_author.py  0004_rename_replies_tweet_reply_to.py  0005_alter_tweet_reply_to.py  0006_alter_profile_header_pic_alter_profile_profile_pic_and_more.py  0007_remove_tweet_image_tweetpix.py  0008_profile_display_name.py  0009_alter_profile_display_name.py  0010_tweetpix_grid.py  0011_remove_tweetpix_grid.py
frontend/: package-lock.json  package.json  urls.py  webpack.config.js
frontend/src/: app.css  app.js  index.js  responsive.css
frontend/src/components/404/: 404.js  404.scss
frontend/src/components/alert/: alert.js  alert.scss
frontend/src/components/auth/: auth.js  auth.scss
frontend/src/components/bookmark/: bookmark.js  bookmark.scss
frontend/src/components/contexts/: alert.js  cache.js  timeline-context.js  usercontext.js
frontend/src/components/explore/: explore.js
frontend/src/components/follow-suggestions/: follow-suggestions.js  follow-suggestions.scss
frontend/src/components/header/: header-small.js  header.js  header.scss
frontend/src/components/home/: home.js  home.scss
frontend/src/components/loading-spinner/: spinner.css  (+2 more)
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
tweeter/: settings.py  urls.py
(+29 files in other folders)
